Closed Bug 910407 Opened 11 years ago Closed 11 years ago

B2G in reset loop on startup with Assertion failure: !NS_IsMainThread(), at /Users/kats/zspace/mozilla-git/dom/wifi/WifiProxyService.cpp:123

Categories

(Firefox OS Graveyard :: Wifi, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: kats, Assigned: fabrice)

Details

Attachments

(2 files)

Attached file Backtrace of the crash
I updated my gecko to recent m-c and built a debug build for Peak. I have some local changes but they are unrelated. On startup the root process crashes with the assertion in the summary, and the device reboots. Reset loop ensues.

Backtrace of the crash attached
For now my workaround is to just comment out the assertion which lets the device boot up.
Attached patch patchSplinter Review
Assignee: nobody → fabrice
Attachment #796899 - Flags: review?(anygregor)
Attachment #796899 - Flags: review?(anygregor) → review+
https://hg.mozilla.org/mozilla-central/rev/f711b998873e
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: