Bug 910407 - Fix Assertion failure: !NS_IsMainThread(), at dom/wifi/WifiProxyService.cpp:123 r=gwagner